Added FAIRIST logo
Signed-off-by: Kevin Coakley <kcoakley@sdsc.edu>

--- a/matrix/templates/matrix/detail.html
+++ b/matrix/templates/matrix/detail.html
@@ -9,7 +9,8 @@
         </style>
     </head>
     <body>
-        <h1>FAIR Matrix</h1>
+        {% load static %}
+        <img src="{% static 'matrix/logo.png' %}" alt="FAIRIST Recommendations Logo" style="width: 33%; height: 33%;"/>
         <p>
             Based on your responses, the following recommendations are included 
             for your consideration and/or inclusion in your project’s Data 
