Comment out q12 and q11
Signed-off-by: Kevin Coakley <kcoakley@sdsc.edu>

--- a/matrix/templates/matrix/detail.html
+++ b/matrix/templates/matrix/detail.html
@@ -63,9 +63,9 @@
                 <td>Accessible</td>
                 <td>
                     <ul>
-                        <li>Available via SDSC Cloud (object store), 
+                        <li>Available from an open web accessible folder. <!-- 
                             {% if "No" in survey.q12_specialized_software %} that doesn’t require specialized software to access. {% else %} The software needed to access the project’s research objects can be obtained from {{ survey.q12_specialized_software_specify }}.{% endif %} 
-                            {% if "Yes" in survey.q11_specialized_software_open_source %} This software is open source.{% endif %}</li>
+                            {% if "Yes" in survey.q11_specialized_software_open_source %} This software is open source.{% endif %}--></li>
                         <li>Any APIs will be versioned and described, linked from the project's website.</li>
                         {% if "Yes" in survey.q09_open_data %}
                         <li>All data is open.</li>
