Added endif statement
Signed-off-by: Kevin Coakley <kcoakley@sdsc.edu>

--- a/matrix/templates/matrix/detail.html
+++ b/matrix/templates/matrix/detail.html
@@ -170,7 +170,8 @@
                 <li>Ethics needed to ensure the primary concern at all stages of research are the rights and wellbeing of Indigenous Peoples.</li>
             </ul>    
         </p>
-         {% if "Yes" in survey.q28_dmp %}       
+        {% endif %}
+        {% if "Yes" in survey.q28_dmp %}       
         <p> This plan will be shared. </p>
         <!-- need to add the specific choice -->
         {% endif %}
