--- a/matrix/templates/matrix/detail.html
+++ b/matrix/templates/matrix/detail.html
@@ -142,6 +142,7 @@
                         {% if survey.q6_simulations %}
                         <li>For all simulations, {{ survey.survey.q6_simulations }}.</li>
                         {% endif %}
+                        {% if survey.q07_license %}
                         <li>A notice posted will designate research objects as licensed under 
                             {% if "Other" in survey.q07_license %} 
                                 {% if survey.q08_license_other_institutional %}{{ survey.q08_license_other_institutional}}{% endif %}
@@ -149,7 +150,8 @@
                             {% else %}
                                 <a href="https://creativecommons.org/about/cclicenses/">{{ survey.q07_license }}</a>
                             {% endif %}.
-                            {% if survey.q25_ML_repro %}
+                        {% endif %}
+                        {% if survey.q25_ML_repro %}
                         <li>Reproducibility implementation considerations for documenting analysis that includes ML will include {{ survey.q25_ML_repro }}.</li>
                         {% endif %}
                         </li>
